# CRF

./: .gitignore  CRF.sdf  CRF.sln  Presentation.pptx  README.md
CRF/: CRF.vcxproj  CRF.vcxproj.filters  node.h  occupancy_grid.cpp  occupancy_grid.h  simulation.cpp
Sensor Simulator/: Sensor_Simulator.sln
Sensor Simulator/Sensor_Simulator/: Environment.cpp  Environment.h  Robot.cpp  Robot.h  Sensor Simulator.cpp  Sensor_Simulator.vcxproj  Sensor_Simulator.vcxproj.filters
Test Classes/CRF/: node.cpp  node.h  occupancy_grid.cpp  occupancy_grid.h  sim  simulation.cpp
Test Classes/Sensor Simulator/: Environment.cpp  Environment.h  Robot.cpp  Robot.h  Sensor Simulator.cpp
gridplot/: __10iteration8  __11iteration9  __1groundtruth  __2beforelbp  __3iteration1  __4iteration2  __5iteration3  __6iteration4  __7iteration5  __8iteration6  __9iteration7  __afterlbp  __box after lbp no learning  __box after lbp with learning  __box learning ground truth  __box learning scan  __matlabafterlbp  box filled  box filled learning ground truth  box learning ground truth  box scan  box unfilled  box unfilled learning ground truth  convertMatlab.py  images2gif.py  matlab_ground_truth  matlab_noisy  partial_office  plotter.py
gridplot/Enclosed Area Environments/: Results  Results~
groovy_workspace/: setup.sh
groovy_workspace/sandbox/crf_grid/: CMakeLists.txt  Makefile  manifest.xml  test_map.yaml
groovy_workspace/sandbox/crf_grid/include/png++/: writer.hpp
groovy_workspace/sandbox/crf_grid/msg_gen/cpp/include/beginner_tutorials/: Num.h
groovy_workspace/sandbox/crf_grid/src/: .Environment.cpp.swp  .Environment.h.swp  .Robot.h.swp  .robot_simulator.cpp.swp  Environment.cpp  Environment.h  Robot.cpp  Robot.h  Sensor Simulator.cpp  amcl.launch  gmapping.launch  grid_processor.cpp  grid_processor.h  map_server.launch  matlab_noisy  node.cpp  node.h  occupancy_grid.cpp  occupancy_grid.h  robot_simulator.cpp  robot_simulator.h  ros_callback_container.cpp  rviz_publish.cpp  simulation.cpp  static_frame.launch
rviz/: default.rviz  persistent_settings  r.rviz
(+21 files in other folders)
